.local-dev/manifest/monitor/grafana/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.local.trapti.tech`)
      services:
        - namespace: grafana
          kind: Service
          name: grafana
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
